package org.dataartifex.sdt;

/* metamodel_version: 1.11.0 */
/* version: 0.1.0-dev */
import java.net.URI;
import java.time.LocalDate;
import java.time.LocalTime;
import java.time.ZonedDateTime;
import java.util.List;
import lombok.*;

/**
  Directive for synthetic data generation.
**/
@Data
@EqualsAndHashCode(callSuper=false)
public class GenerationRule  {

  private String generatorType;
  private String template;
  private List<CodeSnippet> codeSnippets;


}
