package org.dataartifex.sdt;

/* metamodel_version: 1.11.0 */
/* version: 0.1.0-dev */
import java.net.URI;
import java.time.LocalDate;
import java.time.LocalTime;
import java.time.ZonedDateTime;
import java.util.List;
import lombok.*;

/**
  Geospatial coverage boundaries represented by description and/or formal codes or URIs.
**/
@Data
@EqualsAndHashCode(callSuper=false)
public class GeospatialCoverage  {

  private String description;
  private List<String> codes;


}
